@@ -103,7 +103,7 @@ $xpdo_meta_map['rptBanMatch']= array (
     'Resource' => 
     array (
       'class' => 'modResource',
-      'local' => 'ban',
+      'local' => 'resource',
       'foreign' => 'id',
       'cardinality' => 'one',
       'owner' => 'foreign',
