@@ -91,7 +91,7 @@
             <column key="resource" length="" collation="A" null="false" />
         </index>
 
-        <aggregate alias="Resource" class="modResource" local="ban" foreign="id" cardinality="one" owner="foreign" />
+        <aggregate alias="Resource" class="modResource" local="resource" foreign="id" cardinality="one" owner="foreign" />
         <composite alias="Bans" class="rptBanMatchBan" local="id" foreign="ban_match" cardinality="many" owner="foreign" />
     </object>
     
