@@ -38,6 +38,7 @@ $search = $modx->getOption('search',$scriptProperties,false);
 
 /* build query */
 $c = $modx->newQuery('rptBanMatch');
+$c->leftJoin('modResource','Resource');
 if (!empty($search)) {
     $c->where(array(
         'OR:ip:LIKE' => '%'.$search.'%',
@@ -48,6 +49,8 @@ if (!empty($search)) {
     ));
 }
 $count = $modx->getCount('rptBanMatch',$c);
+$c->select($modx->getSelectColumns('rptBanMatch','rptBanMatch'));
+$c->select($modx->getSelectColumns('modResource','Resource','',array('pagetitle')));
 $c->sortby($sortAlias.'.'.$sort,$dir);
 if ($isCombo || $isLimit) {
     $c->limit($limit,$start);
@@ -59,6 +62,7 @@ $list = array();
 foreach ($matches as $match) {
     $matchArray = $match->toArray();
     $matchArray['createdon'] = strftime('%b %d, %Y %I:%M %p',strtotime($match->get('createdon')));
+    $matchArray['pagetitle'] = !empty($matchArray['pagetitle']) ? $matchArray['pagetitle'].' ('.$matchArray['resource'].')' : '';
     
     $list[]= $matchArray;
 }
